<resources>
    <string name="hello">Hello World, SettingsActivity!</string>
    <string name="app_name">Settings</string>
    <string name="tvsearch_settings">电视搜索</string>
    <string name="resolution_setting">分辨率</string>
    <string name="theme_setting">主题</string>
    <string name="time_settings">时间</string>
    <string name="language_settings">语言</string>
    <string name="network_settings">网络设置</string>
    <string name="input_method_settings">输入法</string>
    <string name="account_settings">账户</string>
    <string name="System_update">系统升级</string>
    <string name="application_settings">应用管理</string>
    <string name="audio_output">音频</string>
    <string name="mouse_setting">鼠标</string>
    <string name="super_card">智能卡</string>
    <string name="address_point">.</string>
    <string name="basic_settings">基本设置</string>
    <string name="system_settings">系统设置</string>
    <string name="menu_language">菜单语言</string>
    <string name="Simplified_Chinese">简体中文</string>
    <string name="Traditional_Chinese">繁体中文</string>
    <string name="English">英文</string>
    <string name="Multi_frequency_interaction">多屏互动</string>
    <string name="format_setting">制式设置</string>
    <string name="System_info">系统信息</string>
    <string name="System_low">法律信息</string>
    <string name="System_message">系统消息设置</string>
    <string name="System_restore">系统还原</string>
    <string name="System_guide">用户向导</string>
    <string name="System_low_license">开源许可</string>
    <string name="System_low_agreement">用户协议</string>
    <string name="Agree">同意</string>
    <string name="Disagree">不同意</string>
    <string name="System_info_storage">存储信息</string>
    <string name="System_info_flash">Flash存储空间</string>
    <string name="Machine_info">设备信息</string>
    <string name="System_info_flash_used">已使用%1$s</string>
    <string name="System_info_flash_unused">剩余%1$s</string>
    <string name="System_info_sd">SD卡存储空间</string>
    <string name="System_info_version">版本信息</string>
    <string name="System_product_model">产品型号：</string>
    <string name="System_hardware_version">硬件版本：</string>
    <string name="System_software_version">软件版本：</string>
    <string name="System_os_version">操作系统版本：</string>
    <string name="System_cpu_use">CPU已使用:</string>
    <string name="System_mac">MAC地址:</string>
    <string name="System_android_version">Android版本:</string>
    <string name="System_msg_clear">清空消息记录</string>
    <string name="System_msg_notification">系统消息通知</string>
    <string name="System_msg_details">消息内容</string>
    <string name="System_msg_time">更新时间</string>
    <string name="System_msg_list_number">%1$s、</string>
    <string name="System_msg_list_time">yyyy-MM-dd HH:mm</string>
    <string name="System_update_setting">"默认设置:"</string>
    <string name="System_update_check">立即检查</string>
    <string name="System_update_find_version">检查到最新版本号%x</string>
    <string name="System_update_downloading">正在下载升级包%x</string>
    <string name="System_update_ok">更新成功！</string>
    <string name="App_flash_unused">机顶盒内部空间：</string>
    <string name="App_sd_unused">SD卡空间：</string>
    <string name="App_total_size">共%1$s</string>
    <string name="App_my_application">我的应用</string>
    <string name="App_details">点击图标进行卸载和相关操作</string>
    <string name="App_name">娱乐转飞盘</string>
    <string name="App_size">"0.00B"</string>
    <string name="App_time">yyyy.MM.dd</string>
    <string name="App_data_size">"0.00B"</string>
    <string name="App_flash_data">flash数据</string>
    <string name="App_uninstall">卸载</string>
    <string name="App_sd_data">SD卡数据</string>
    <string name="App_cache_data">缓存数据</string>
    <string name="App_clear_cache">清除缓存</string>
    <string name="clear_user_data_text">清除数据</string>
    <string name="App_move_sd">应用程序移至SD卡</string>
    <string name="insufficient_storage">磁盘空间不足</string>
    <string name="does_not_exist">程序不存在</string>
    <string name="app_forward_locked">程序已锁，禁止移动</string>
    <string name="invalid_location">无效安装地址</string>
    <string name="system_package">系统程序，禁止移到SD卡</string>
    <string name="app_move_nosdcard">无SD卡</string>
    <string name="app_mounted_sdcard">SD卡可用</string>
    <string name="move_app_failed">移动应用程序失败</string>
    <string name="move_app">移动</string>
    <string name="move_app_to_internal" product="default">移至内存</string>
    <string name="move_app_to_sdcard" product="default">应用程序移至SD卡</string>
    <string name="app_factory_reset">卸载更新</string>
    <string name="uninstall_text">卸载</string>
    <string name="disable_text">关</string>
    <string name="enable_text">开</string>
    <string name="moving">移动中</string>
    <string name="recompute_size">"正在重新计算大小..."</string>
    <string name="clear_data_dlg_title">"要删除应用程序数据吗？"</string>
    <string name="clear_data_dlg_text">"系统会永久删除此应用程序的所有数据"</string>
    <string name="dlg_ok">确认</string>
    <string name="dlg_cancel">取消</string>
    <string name="app_not_found_dlg_title"></string>
    <string name="app_not_found_dlg_text">"在已安装应用程序的列表中找不到该应用程序。"</string>
    <string name="clear_data_failed">"无法清除应用程序数据。"</string>
    <string name="app_factory_reset_dlg_title">"要卸载更新吗？"</string>
    <string name="app_factory_reset_dlg_text">"系统将会卸载此 Android 系统应用程序的所有相关更新。"</string>
    <string name="clear_failed_dlg_title">"清除数据"</string>
    <string name="clear_failed_dlg_text">不能清除数据</string>
    <string name="security_settings_desc" product="default">"此应用程序有权访问您手机上的以下内容："</string>
    <string name="move_app_failed_dlg_title"></string>
    <string name="move_app_failed_dlg_text">不能移动应用程序</string>
    <string name="app_install_location_title">"首选安装位置"</string>
    <string name="app_install_location_summary">"更改安装新应用程序时使用的首选安装位置"</string>
    <string name="app_disable_dlg_title">"要停用内置应用程序吗？"</string>
    <string name="app_disable_dlg_text">"如果停用内置应用程序，其他应用程序可能会出现异常。"</string>
    <string name="computing_size">"正在计算..."</string>
    <string name="spinner_1_color_prompt">Choose a color</string>
    <string name="tv_output_mode_dialog_title">"注意"</string>
    <string name="tv_output_mode_set_confirm_dialog">"显示模式已设置。你确认保存？如果你不操作,这将在15秒内恢复。"</string>
    <string name="Network_eth">有线网络</string>
    <string name="Network_wireless">无线网络</string>
    <string name="Network_proxy">有线代理</string>
    <string name="Network_pppoe">PPPOE</string>
    <string name="Local_connection">本地连接1</string>
    <string name="Signal_strength">信号强度: </string>
    <string name="Signal_text">非常好</string>
    <string name="Connection_speed">连接速度: </string>
    <string name="Connection_text">100Mbps</string>
    <string name="IPAddr">IP地址: </string>
    <string name="IPAddr_text">0.0.0.0</string>
    <string name="Netmask">子网掩码: </string>
    <string name="Netmask_text">0.0.0.0</string>
    <string name="Gateway">默认网关: </string>
    <string name="Gateway_text">0.0.0.0</string>
    <string name="DNS">DNS: </string>
    <string name="DNS_text">0.0.0.0</string>
    <string name="GetwayDhcp">通过DHCP指派</string>
    <string name="GetwayManul">手工指定</string>
    <string name="yes">"确定"</string>
    <string name="display_position_dialog_no">"No"</string>
    <string name="ipaddr_format_error">"请输入0-255的数字"</string>
    <string name="auto_connect">"自动连接"</string>
    <string name="eth_back">"有线网络"</string>
    <string name="manual_connect">"手动连接"</string>
    <string name="start_on">"启动"</string>
    <string name="start_close">"关闭"</string>
    <string name="ethconnect_fail">"有线网络已断开！"</string>
    <string name="ethconnect_wait">"正在连接网络请等待..."</string>
    <string name="ethconnect_disable">"有线网络连接失败，请检查网络！"</string>
    <string name="ethconnect_ok">"已经连接到网络"</string>
    <string name="ethmanual">"有线网络/手动连接"</string>
    <string name="ethmanual_ip">"IP地址:"</string>
    <string name="ethmanual_netmask">"子网掩码:"</string>
    <string name="ethmanual_gateway">"网关:"</string>
    <string name="ethmanual_dns1">"DNS:"</string>
    <string name="ethmanual_dns2">"DNS2"</string>
    <string name="eth_get_ip">正在获取IP地址...</string>
    <string name="eth_connection">有线：本地连接%1$s</string>
    <string name="network_disconnection">未连接网络</string>
    <string name="wifi_connection">WI-FI：%1$s</string>
    <string name="wirelessConnect">"无线网络"</string>
    <string name="WIFI">"WIFI:"</string>
    <string name="wirelessRefresh">"正在刷新网络列表......"</string>
    <string name="wirelessList">"网络列表"</string>
    <string name="wireless_failed">"没有打开无线网络"</string>
    <string name="ssid">"网络SSID"</string>
    <string name="wireless_safe">"安全性"</string>
    <string name="wireless_password">"密码"</string>
    <string name="wireless_dialog_password">"输入密码:"</string>
    <string name="save">"保存"</string>
    <string name="show_password">"显示密码"</string>
    <string name="wifi_add">"添加网络"</string>
    <string name="wifi_add_add">"无线网络/添加网络"</string>
    <string name="wifi_add_back">"无线网络/添加网络"</string>
    <string name="wifi_wps_overlap_error">Another Wi-Fi protected session was detected. Try again in a few minutes.</string>
    <string name="wifi_fail_to_scan">"扫描不到网络"</string>
    <string name="wifi_secure_none">未设置安全机制的无线网络</string>
    <string name="wifi_secure">通过%1%s进行保护</string>
    <string name="wifi_secure_wep">通过WEP进行保护</string>
    <string name="wifi_secure_wpa">通过WPA2进行保护</string>
    <string name="wifi_secure_eap">通过802.1x进行保护</string>
    <string name="wifi_ssid">网络名称：</string>
    <string name="wifi_strength">信号强度：</string>
    <string name="wifi_security">安全性：</string>
    <string name="wifi_password">密码：</string>
    <string name="wifi_display_password">显示密码</string>
    <string name="wifi_connecting_prompt">正在连接...</string>
    <string name="wifi_connected_prompt">连接到  %1$s</string>
    <string name="wifi_connect">连接</string>
    <string name="wifi_forget">忘记网络</string>
    <string name="wifi_disconnect">断开</string>
    <string name="wifi_connect_speed">连接速度：</string>
    <string name="wifi_connect_ipaddr">IP 地址：</string>
    <string name="wifi_disabled">打开WI-FI</string>
    <string name="wifi_disabling">正在关闭...</string>
    <string name="wifi_enabling">正在打开...</string>
    <string name="wifi_get_ip">正在从%1$s获取IP地址...</string>
    <string name="wifi_connected">已连接，</string>
    <string name="wifi_obtaining_ipaddr">正在获取IP</string>
    <string name="wifi_add_psk_password_hint">" 输入8位以上密码"</string>
    <string name="wifi_add_password_hint">"   请输入密码"</string>
    <string name="wifi_add_name_hint">"   请输入网络SSID"</string>
    <string name="network_connected">已连接</string>
    <string name="network_disable">未启用</string>
    <string name="network_noconnected">未连接</string>
    <string name="propty_start">已启用</string>
    <string name="propty_disable">未启用</string>
    <string name="wificonnect_wait">"正在连接"</string>
    <string name="wificonnect_fail">"连接失败"</string>
    <string name="proxy_setting">"代理设置"</string>
    <string name="http_proxy">"HTTP代理:"</string>
    <string name="http_addr">"地址:"</string>
    <string name="http_port">"端口:"</string>
    <string name="http_skip">"跳过本地地址的代理服务器:"</string>
    <string name="network_point">"."</string>
    <string name="Account_name">用户名：</string>
    <string name="Account_password">密码：</string>
    <string name="Account_login">登录</string>
    <string name="Account_find_password">找回密码</string>
    <string name="Account_register">注册新账户</string>
    <string name="Account_name_hint">个人邮箱/手机号</string>
    <string name="name_password_digits">".-_@0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ"</string>
    <string name="config_system">系统设置/智能卡</string>
    <string name="config_card_number">本机卡号:</string>
    <string name="config_system_cardinfo">系统设置/智能卡/智能卡信息</string>
    <string name="config_card_stbid">STBID:</string>
    <string name="config_card_loader">LOADER 版本:U-Boot 2010.06</string>
    <string name="config_card_update_time">升级时间:%1$s</string>
    <string name="config_card_update_state">升级状态:%1$s</string>
    <string name="config_card_ca_version_text">CA版本号:%1$s</string>
</resources>