<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/config_cardinfo_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dip"
        android:layout_marginTop="80dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/config_system_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:alpha="75"
            android:background="#202031"
            android:drawableLeft="@drawable/search_left_arrows"
            android:drawablePadding="20dip"
            android:paddingLeft="15dip"
            android:paddingRight="20dip"
            android:text="@string/config_system_cardinfo"
            android:textColor="@color/white"
            android:textSize="35sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/config_system_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dip"
        android:layout_marginTop="80dip"
        android:alpha="75"
        android:background="#202031"
        android:drawableLeft="@drawable/search_left_arrows"
        android:drawablePadding="20dip"
        android:paddingLeft="15dip"
        android:paddingRight="20dip"
        android:text="@string/config_system"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="35sp" />

    <LinearLayout
        android:id="@+id/config_cardinfo_cardnumber_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/config_system_title"
        android:layout_marginLeft="400dip"
        android:layout_marginTop="300dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_card_number"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/config_card_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/config_cardinfo_cardstbid_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/config_cardinfo_cardnumber_ll"
        android:layout_below="@id/config_cardinfo_cardnumber_ll"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_card_stbid"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/config_stbid_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="35sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/config_cardloader_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/config_cardinfo_cardnumber_ll"
        android:layout_below="@id/config_cardinfo_cardstbid_ll"
        android:layout_marginTop="20dip"
        android:text="@string/config_card_loader"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/config_updatetime_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/config_cardinfo_cardnumber_ll"
        android:layout_below="@id/config_cardloader_tv"
        android:layout_marginTop="20dip"
        android:text="@string/config_card_update_time"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/config_update_state_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/config_cardinfo_cardnumber_ll"
        android:layout_below="@id/config_updatetime_tv"
        android:layout_marginTop="20dip"
        android:text="@string/config_card_update_state"
        android:textColor="@color/white"
        android:textSize="35sp" />
    <TextView
        android:id="@+id/config_update_ca_version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/config_cardinfo_cardnumber_ll"
        android:layout_below="@id/config_update_state_tv"
        android:layout_marginTop="20dip"
        android:text="@string/config_card_ca_version_text"
        android:textColor="@color/white"
        android:textSize="35sp" />
</RelativeLayout>