<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        >
<LinearLayout 
 	android:orientation="horizontal" android:id="@+id/account_settings"
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
 	android:layout_marginLeft="80dp"
    android:layout_marginTop="200dp" >


	<LinearLayout android:layout_width="270dp"
	  	android:orientation="vertical"
	  	android:layout_height="fill_parent">
	  	<TextView android:layout_width="wrap_content"
       			android:layout_height="100dp"
	  	        style="@style/TextStyle"
	  	        android:text="@string/Account_name" />
       	<TextView android:layout_width="wrap_content"
       			android:layout_height="wrap_content"
	  	        style="@style/TextStyle"
	  	        android:text="@string/Account_password" />    

	</LinearLayout>
	   			
	<LinearLayout android:layout_width="wrap_content" android:layout_height="fill_parent"
				android:orientation="vertical">
       	<EditText android:id="@+id/editAccountName" android:layout_height="60dp"        			
       			android:layout_marginTop="5dp"
       			style="@style/LongEditTextStyle"
		       	android:hint="@string/Account_name_hint"
       			android:singleLine="true"
       			android:layout_width="500dp" >
       	</EditText>	
       	<LinearLayout android:layout_width="fill_parent"
	  		android:orientation="vertical"
	  		android:layout_height="40dp">
   			<TextView android:layout_width="wrap_content"
	  	        style="@style/TextSmallStyle"      
	  	        android:id="@+id/textName"			
       			android:layout_marginTop="5dp"
       			android:layout_height="wrap_content" />
		</LinearLayout>
       	<EditText android:id="@+id/editAccountPassword" android:layout_height="60dp"  
       			style="@style/LongEditTextStyle" 
       			android:password="true"	
       			android:singleLine="true"	
       			android:layout_marginTop="5dp"
       			android:layout_width="500dp">
       	</EditText>	
       	<LinearLayout android:layout_width="fill_parent"
	  		android:orientation="vertical"
	  		android:layout_height="65dp">
       		<TextView android:layout_width="wrap_content"	
       			android:layout_marginTop="5dp"     
	  	        android:id="@+id/textPassword"	
	  	        style="@style/TextSmallStyle"      		
       			android:layout_height="wrap_content" />	
		</LinearLayout> 
	  	<Button android:id="@+id/btn_login" 
	  			android:layout_width="@dimen/MiddleButtonWidth" android:layout_height="@dimen/MiddleButtonHeight" 
				android:layout_marginLeft="120dp"
	  			style="@style/SettingButtonStyle"   
	  	        android:text="@string/Account_login">
	  	</Button>
	  	<Button android:id="@+id/btn_find_password" 
	  			android:layout_width="@dimen/MiddleButtonWidth" android:layout_height="@dimen/MiddleButtonHeight"
	  			android:text="@string/Account_find_password"  
	  			style="@style/SettingButtonStyle"    
				android:layout_marginLeft="120dp"		
	  			android:layout_marginTop="25dp">
	  	</Button>
	  	<Button android:id="@+id/btn_register" 
	  			android:layout_width="@dimen/MiddleButtonWidth" android:layout_height="@dimen/MiddleButtonHeight"
	  			style="@style/SettingButtonStyle"    
	  			android:text="@string/Account_register"  
				android:layout_marginLeft="120dp"			
	  			android:layout_marginTop="25dp">
	  	</Button> 
	</LinearLayout>			
 
</LinearLayout>

	<RelativeLayout
        android:id="@+id/toastLayout"
        android:layout_width="1140dp"
        android:layout_height="172dp"
        android:layout_centerVertical="true"
        android:background="@drawable/dlg_bg"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/toast_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:textColor="#bbbbbb"
            android:textSize="35dp" />

        <ImageView
            android:id="@+id/toastImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/toast_text"
            android:background="@anim/loading"
            android:baselineAlignBottom="true"
            android:visibility="visible" />
    </RelativeLayout>

</RelativeLayout>

